--- a/app/src/main/res/layout/activity_actual_game.xml
+++ b/app/src/main/res/layout/activity_actual_game.xml
@@ -7,6 +7,8 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.arsh.reactiontime.ActualGame">
 
+    <!--height = 880dp-->
+
     <!--<android.support.design.widget.AppBarLayout-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
@@ -29,6 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_menu_save" />
 
 </android.support.design.widget.CoordinatorLayout>
