--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -100,7 +100,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email"
+        android:rotation="90"
+        app:srcCompat="@android:drawable/arrow_up_float"
         android:clickable="true"
         android:onClick="@string/title_activity_ready_screen" />
 
